# worker

./: .dockerignore  .gcloudignore  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  semantic-release.yml
plugins/reference-materializer/: Cargo.toml
plugins/reference-materializer/src/: lib.rs
src/: command_bus.rs  config.rs  lib.rs  main.rs  materializer.rs  metrics.rs  metrics_server.rs  plugin.rs  ratelimit.rs  result_locator.rs  result_materializer.rs  result_producer_stage.rs  result_resolver.rs  scrub.rs  sharding.rs  snowflake.rs  spool_runtime.rs  state_builder.rs  state_locator.rs  state_materializer.rs  state_reader.rs  subscription.rs  worker.rs
src/client/: control_plane.rs  mod.rs  sealed.rs  tls.rs
src/ehdb/: backends.rs  contract.rs  dataplane.rs  eventlog.rs  eventlog_backend.rs  eventlog_gc.rs  eventstream.rs  flight_sql_endpoint.rs  guard.rs  kv.rs  metrics.rs  mod.rs  object.rs  projection.rs  query.rs  rag.rs  readiness.rs  systemstore.rs  vector.rs
src/events/: emitter.rs
src/executor/: auth_alias.rs  case_evaluator.rs  command.rs  keychain_namespace.rs  mod.rs
src/nats/: lag_poller.rs  mod.rs  source.rs  subscriber.rs
tests/: affinity_multi_replica.rs  dispatch_nats_mcp.rs  ehdb_integration.rs  offserver_tail_latency.rs  state_index_memory_bound.rs  state_shard_cold_load.rs
tests/fixtures/: README.md  reference_materializer.wasm
