[package]
name = "noetl-worker"
version = "5.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/noetl/noetl"
homepage = "https://noetl.io"
description = "NoETL Worker Pool - Executes workflow commands via NATS"

[[bin]]
name = "noetl-worker"
path = "src/main.rs"

[dependencies]
# Tool library.
#
# `noetl-tools = "2.10"` picks up the `arrow_codec::try_encode_tabular_json`
# helper added in R-2.2 PR-A — the worker's `build_call_done_result`
# now calls it on the over-budget branch to encode DuckDB / Postgres
# rowsets as Arrow IPC stream bytes (media_type
# `application/vnd.apache.arrow.stream`) instead of JSON, so cross-
# stack consumers can read the bytes with
# `pyarrow.ipc.RecordBatchStreamReader` directly + colocated consumers
# benefit from the columnar layout in the shm cache.
noetl-tools = "2.10"

# Shared execution core -- types and utilities shared with the noetl
# CLI's local-mode runner.  Adoptions:
# - `condition::{Operator, Condition, evaluate_structured_condition}`
#   in place of the case_evaluator's inline duplicates (R-1.2 PR-2c).
# - `worker::source::{CommandSource, ClaimOutcome, Pulled, Command}`
#   in `nats::source::NatsCommandSource` (R-1.2 PR-2d-2).
# - `events::ExecutorEvent` as the wire-format event envelope sent
#   to `/api/events`, replacing the worker-local `WorkerEvent`
#   (R-1.2 PR-EE-3, this PR).  Both servers (Rust noetl-server +
#   Python broker) accept this shape after EE-2 + EE-4.
# See Appendix H of the global hybrid cloud blueprint at
# https://noetl.dev/docs/architecture/noetl_global_hybrid_cloud_grid_distributed_architecture_blueprint
# and especially § H.10 (the tree-walker vs pull-model finding).
noetl-executor = "0.3"

# Same-node zero-copy IPC cache for over-budget tool results
# (R-2.1 / noetl/cli#39).  When `call.done`'s serialised
# `result.context` exceeds the broker's 100KB inline budget,
# the worker stages the bytes in shared memory + emits an
# `IpcHint` reference instead of dropping the context entirely.
# See `executor::command::build_call_done_result` for the
# fallback chain.
noetl-arrow-cache = "0.1"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }

# Async trait macro — required for impl'ing noetl_executor's
# `worker::source::CommandSource` (the trait uses #[async_trait]).
async-trait = "0.1"

# NATS messaging
async-nats = "0.38"
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Regex
regex = "1.10"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Observability — per agents/rules/observability.md (codified
# 2026-05-30).  `prometheus` provides the metrics registry + the
# Prometheus text format encoder; `axum` exposes the `/metrics`
# endpoint on a dedicated port (default 9090) so sidecar scrapers
# can pull without going through the main control-plane traffic.
prometheus = "0.14"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
hostname = "0.4"

# URL parsing for NATS_URL credential extraction.  Honors
# `nats://user:pass@host` inline auth (the convention the Python
# worker + most NATS clients use); async-nats 0.38's `connect(url)`
# only consumes the addr portion, so we extract creds ourselves
# and feed `ConnectOptions::with_user_and_password`.
url = "2"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
