[package]
name = "noetl-worker"
version = "5.52.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/noetl/noetl"
homepage = "https://noetl.io"
description = "NoETL Worker Pool - Executes workflow commands via NATS"

[[bin]]
name = "noetl-worker"
path = "src/main.rs"

[features]
# WASM plug-in host for system-pool playbooks (noetl/ai-meta#105 — Phase 4
# of the System Pool + WASM Plug-in ADR). Now ON by default: the dispatch
# routing landed (Round 5), so the deployed worker carries the host and
# routes `tool_kind: "wasm"` commands to it. Build `--no-default-features`
# for a lean worker without wasmtime.
default = ["wasm-plugin"]
wasm-plugin = ["dep:wasmtime"]

[dependencies]
# WASM plug-in host (optional; enabled by the `wasm-plugin` feature).
wasmtime = { version = "27", optional = true }
# Tool library.
#
# `noetl-tools = "2.18"` picks up:
# - `arrow_codec::try_encode_tabular_json` (2.10.0): the worker's
#   `build_call_done_result` calls it on the over-budget branch to
#   encode DuckDB / Postgres rowsets as Arrow IPC stream bytes
#   (media_type `application/vnd.apache.arrow.stream`) instead of
#   JSON, so cross-stack consumers can read the bytes with
#   `pyarrow.ipc.RecordBatchStreamReader` directly + colocated
#   consumers benefit from the columnar layout in the shm cache.
# - `ResultFetchTool` (2.11.0, noetl/tools#8): the playbook-facing
#   surface for explicit cross-step / cross-node fetches of a
#   `noetl://execution/<eid>/result/<step>/<id>` URI.  Tool kind
#   `result_fetch` is dispatched through the noetl-tools registry
#   when a playbook step declares it.  Per
#   `agents/rules/execution-model.md` fetch policy belongs in the
#   playbook layer; this tool is the surface authors invoke.
# - `NatsTool` (2.15.0, noetl/tools#12): JetStream / K/V / Object
#   Store operations dispatched via `tool_kind = "nats"`.  No
#   per-variant match arm needed — the dynamic registry handles it.
# - `McpTool` (2.16.0, noetl/tools#13): MCP JSON-RPC over HTTP bridge
#   dispatched via `tool_kind = "mcp"`.  Same dynamic-registry pattern.
# - `PythonTool` result-global capture (2.17.1, noetl/tools#17):
#   user code's `result = {...}` global is captured via a sentinel-
#   marker line on stdout and exposed as the tool's `data` field.
#   Without this, every playbook whose next.arcs / step.when guards
#   read step results would stall — the orchestrator couldn't
#   resolve `{{ step_name.field }}` references to a real value.
#   Surfaced via the Rust-only e2e probe on the Rust server (see
#   noetl/ai-meta#59 follow-up).
# - `TaskSequenceTool` (2.18.0, noetl/tools#18; breaking v3.0.0
#   noetl/tools#45): the runtime for the v10 list-shaped
#   `tool: [...]` pipeline.  Server emits `tool.kind =
#   task_sequence` for any pipeline-shape step (per
#   noetl/server#61's accepted-both-shapes parser); without this
#   tool the worker errored with "Tool not found: task_sequence"
#   and every pipeline-shape fixture stalled.  v3.0.0 replaces
#   `_prev`/`_results` injection with explicit `set:`/`input:`
#   forward-only data binding — each task declares `set:` to
#   capture `output` into named context variables, and later
#   tasks use `input:` to pull those variables.  No backward
#   compat fallback; all fixtures must use the new shape.
# - PostgresTool error detail (2.18.2, noetl/tools#21): the postgres
#   tool now surfaces the real SQLSTATE + message (e.g. `ERROR:
#   relation "..." does not exist (SQLSTATE 42P01)`) instead of the
#   opaque `db error` that tokio_postgres' Display renders.  Makes
#   failing-SQL playbook steps diagnosable from the event log.
#   (Cargo.lock now resolves noetl-tools 2.18.2; `^2.18` already
#   covered it.)
# - PostgresTool + DuckdbTool canonical v10 SQL shapes (2.18.3,
#   noetl/tools#23): the postgres tool accepts `command:` as an alias
#   for `query:` (canonical v10 postgres steps use `command:`, e.g.
#   v10_canonical_example.yaml), and both the postgres and duckdb tools
#   now run multi-statement SQL (`CREATE …; INSERT …; SELECT …`) by
#   batching the leading statements and keeping the final statement on
#   the typed single-statement path (so a trailing SELECT still returns
#   typed rows).  Without this, canonical postgres steps failed to parse
#   (`missing field query`) and multi-statement duckdb/postgres fixtures
#   errored on the single-statement prepared protocol.  Surfaced by the
#   Rust-only kind regression sweep for noetl/ai-meta#54.  (Cargo.lock
#   now resolves noetl-tools 2.18.3; `^2.18` already covered it.)
# - More canonical v10 config shapes (2.18.4, noetl/tools#26): the
#   duckdb tool accepts `command:` as an alias for `query:` (parity
#   with postgres), and the http tool coerces non-string `params` /
#   `headers` / `form` values — template rendering yields integers
#   (`offset: "{{ ctx.offset }}"`) or null (undefined ref), which the
#   `HashMap<String,String>` fields rejected with `invalid type:
#   integer/null, expected a string`.  Numbers/bools are stringified,
#   null entries dropped.  Unblocks the pagination + http fixtures.
#   (Cargo.lock now resolves noetl-tools 2.18.4; `^2.18` covers it.)
# - Dollar-quote-aware statement splitter (2.18.5, noetl/tools#27): the
#   multi-statement splitter added in 2.18.3 split on `;` inside
#   PostgreSQL `$$ … $$` dollar-quoted blocks, shredding plpgsql function
#   bodies / `DO` blocks (`unterminated dollar-quoted string`).  The
#   splitter now tracks dollar-quote state (`$$`/`$tag$`; `$1` params
#   excluded).  Surfaced by data_transfer/postgres_jsonb_test on the
#   Rust-only kind regression sweep (noetl/ai-meta#54).  (Cargo.lock now
#   resolves noetl-tools 2.18.5; `^2.18` covers it.)
# - GCP Secret Manager provider (2.19.0, noetl/tools#29): the
#   `secrets` / `secret_manager` tools now dispatch on a `provider` field
#   to a backend behind a `SecretProvider` trait — `env` (unchanged) or
#   `gcp` (Google Secret Manager via ambient GKE Workload-Identity token).
#   Secrets Wallet Phase 3a (noetl/ai-meta#61).  (Cargo.lock now resolves
#   noetl-tools 2.19.0; `^2.18` covers it.)
# - Multi-tool sibling references (3.1.1, noetl/ai-meta#87): in a
#   `tool: [list]` step, a later sub-tool can read an earlier sibling's
#   output via `{{ <label>.<field> }}` (was rendering empty).  (Cargo.lock
#   now resolves noetl-tools 3.1.1; `^3` covers it.)
# - v3.4: store-and-forward spool engine + per-downstream circuit breaker
#   (`noetl_tools::spool`) for the subscription runtime (RFC #90 Phase 4).
# - v3.5: `gcs` spool backend (`noetl_tools::spool::GcsBackend`) — the
#   durable buffer for the out-of-cluster Cloud Run runtime (RFC #90 Phase 5).
# - v3.6: `s3` spool backend (`noetl_tools::spool::S3Backend`) — AWS SigV4
#   over reqwest, S3/MinIO/R2/B2 (noetl/ai-meta#94).
# - v3.7: spool cross-restart recovery helpers (`recv_seq_from_object_key` +
#   `SpoolEngine::high_water_recv_seq`) for the startup drain auto-trigger
#   (noetl/ai-meta#93); 3.7.1 pins `time` =0.3.47 to dodge the async-nats
#   E0119 under rustc 1.92.
# - v3.9: Snowflake key-pair (JWT) auth — `SnowflakeConfig.public_key` +
#   `generate_keypair_jwt` (noetl/tools#62).  Pairs with the
#   `sf_public_key -> public_key` field mapping in auth_alias.rs
#   (noetl/worker#83, noetl/ai-meta#98).  Bumped from 3.7 to enable it.
# - v3.10: Snowflake<->Postgres transfer directions + credential-alias
#   resolution for transfer endpoints (noetl/tools#65).  Pairs with the
#   transfer source/target alias pre-resolution in auth_alias.rs
#   (noetl/ai-meta#99).
# - v3.12: `noetl_tools::locator` — Resource Locator + `ResultCoordinates`
#   with the two-level cursor fan-out coordinate `(frame,row)`.  R02b stamps
#   the stable logical URI on over-budget result references
#   (`ResultCoordinates::new(...).logical_uri()`), collision-free across
#   cursor fan-out (noetl/ai-meta#104).
# - v3.13: deferred (ack-after-processing) ack — `AckMode::Defer`,
#   `SourceClient::ack(ack_ids, AckDisposition)`, NATS `$JS.ACK` durable
#   handles.  The CQRS materializer loop (`src/materializer.rs`) drives it
#   to ack noetl_events batches only after events/project succeeds
#   (noetl/ai-meta#103).
# - v3.14: two task_sequence/http regressions surfaced by the batch
#   pft_flow_test.  3.13.1 (tools#72, noetl/ai-meta#126): the `http` tool
#   exposes the parsed response body under `data` again (Python-era
#   contract) with `body` kept as a back-compat alias, so fixtures reading
#   `output.data.data` resolve.  3.14.0 (tools#73, noetl/ai-meta#125): the
#   `task_sequence` runner honours `do: jump`/`to:`, `do: break`, and
#   `do: retry` (attempts/backoff + infinite-jump guard) instead of only
#   `do: fail`.  Bumped from 3.13 to make the worker pick up both at runtime.
# - v3.14.1: behavior-preserving `task_sequence` per-sub-task CPU
#   optimization (tools#74, noetl/ai-meta#127).  `TemplateEngine::render_value`
#   builds the proxied minijinja context ONCE and threads it through the
#   recursion (`render_value_with`/`render_with`); new
#   `build_context_with_overlay` skips the redundant `to_template_context()`
#   HashMap clone + per-block `ExecutionContext` clones in the set/policy
#   paths.  Cuts per-sub-task context cost ~61.6% (2.6x) in an isolated
#   micro-bench — pairs with the prod worker CPU-limit bump (1->2) so the
#   batch hot path has both more headroom AND less work per slot.
#   Behavior-preserving (407 tools tests + 2 new equivalence pins); no
#   worker code change.
# - v3.14.2: postgres `pg_value_to_json` now serializes tz-naive
#   `timestamp` (chrono::NaiveDateTime) plus date/time/uuid/numeric/bytea
#   instead of returning `null` (tools#75, noetl/ai-meta#95).  Fixes the
#   `auth0_login` postgres step returning `expires_at: null` for a plain
#   `timestamp` column.  Tool-only fix (409 tools tests + clippy); no
#   worker code change.
# - v3.17.0: `registry::kind_is_side_effecting` — the per-kind
#   side-effect classifier the Phase E durability barrier consumes
#   (tools#78, noetl/ai-meta#104).  Conservative default `true`; only
#   `noop` / `rhai` are `false`.  Required by `command_is_side_effecting`
#   in src/executor/command.rs.
# - v3.18.0: the `playbook` tool's opt-in `return_result: true` mode
#   (tools#80, noetl/ai-meta#136).  In blocking mode the tool now resolves
#   and returns the CHILD execution's real result payload (what a sibling
#   step reads as `{{ step }}`) instead of `{status, execution_id}`, so
#   MCP-composition playbooks (the travel itinerary-planner dispatching
#   `mcp/google-places|duffel|amadeus|firestore`) see real sub-playbook
#   output rather than synthetic placeholders.  Opt-in (`return_result`)
#   so the 100+ existing `kind: playbook` callers keep their async /
#   `return_step` semantics; env kill-switch
#   `NOETL_PLAYBOOK_AWAIT_CHILD_RESULT` (default true) reverts the new
#   path without a redeploy.  No worker code change — runtime adoption only.
#
# 3.18.1 (#136 payload fix): `build_payload` no longer lets the worker's
#   auto-injected empty `args: {}` shadow an explicit `payload:` on a
#   `kind: playbook` step.  Precedence is non-empty `args` -> `payload` ->
#   `args` as-is -> `{}`, so an MCP-composition step like
#   `mcp/google-places.search_text` forwards its `method`/`tool`/`arguments`
#   to the child instead of running the child's default `tools/list`.
#   Runtime adoption only — no worker code change.
#
# 3.19.1 (#79 / ai-meta FIX A): `NatsSource` caches its NATS connection +
#   resolved pull-consumer across poll/ack instead of connecting, resolving,
#   draining and DROPPING the connection on every call.  The CQRS event
#   materializer + result materializer drain loops (system worker pool) poll
#   this source on a ~2.5s idle cadence (and far faster under load), so the
#   pre-3.19.1 source reconnected to NATS every cycle — the system-pool
#   "reconnect 50-116x/sec" storm.  3.19.1 makes the drain hold ONE long-lived
#   connection, matching the state-builder drain.  Runtime adoption only —
#   no worker code change.
noetl-tools = "3.19.1"

# Shared execution core -- types and utilities shared with the noetl
# CLI's local-mode runner.  Adoptions:
# - `condition::{Operator, Condition, evaluate_structured_condition}`
#   in place of the case_evaluator's inline duplicates (R-1.2 PR-2c).
# - `worker::source::{CommandSource, ClaimOutcome, Pulled, Command}`
#   in `nats::source::NatsCommandSource` (R-1.2 PR-2d-2).
# - `events::ExecutorEvent` as the wire-format event envelope sent
#   to `/api/events`, replacing the worker-local `WorkerEvent`
#   (R-1.2 PR-EE-3, this PR).  Both servers (Rust noetl-server +
#   Python broker) accept this shape after EE-2 + EE-4.
# See Appendix H of the global hybrid cloud blueprint at
# https://noetl.dev/docs/architecture/noetl_global_hybrid_cloud_grid_distributed_architecture_blueprint
# and especially § H.10 (the tree-walker vs pull-model finding).
noetl-executor = "0.5"

# Same-node zero-copy IPC cache for over-budget tool results
# (R-2.1 / noetl/cli#39).  When `call.done`'s serialised
# `result.context` exceeds the broker's 100KB inline budget,
# the worker stages the bytes in shared memory + emits an
# `IpcHint` reference instead of dropping the context entirely.
# See `executor::command::build_call_done_result` for the
# fallback chain.
noetl-arrow-cache = "0.1"

# Arrow — decode the Feather/IPC result tier back to JSON on the resolve-by-URN
# read path (noetl/ai-meta#104 Phase C).  Already compiled transitively via
# noetl-tools' `arrow_codec`; named directly here so the worker can manipulate
# the `RecordBatch` that `decode_record_batches` returns.  Version tracks
# noetl-tools' arrow 53.
arrow = "53"

# EHDB (Event Horizon Database) in-process reference runtime — noetl/ehdb#234.
# The worker/playbook/system data-plane roles own the EHDB integration *in
# process*, calling the `ehdb-reference` crate's bounded local-reference helpers
# (`summarize_local_reference`, `append_local_reference_domain_record`,
# `read_local_reference_domain_records`, `consume_local_reference_event_records`,
# `ack_local_reference_event_consumer`) directly — no subprocess to the
# `ehdb-local-reference` binary.  This is the Rust-only home of the integration
# (the Python `noetl.core.ehdb_*` path is retired); prod runs worker-rust so the
# in-process call is the only path that actually executes.  Pinned to the merged
# Phase D main tip (noetl/ehdb#237); arrow 53 matches the worker's own arrow pin.
# Disabled by default: no code path opens a runtime unless NOETL_EHDB_ENABLED is
# truthy AND the role is a data-plane role, so the dependency is inert at rest.
ehdb-reference = { git = "https://github.com/noetl/ehdb", rev = "3cefba916e661d976924ad0a8d8f070fcc3c4d62" }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }

# Async trait macro — required for impl'ing noetl_executor's
# `worker::source::CommandSource` (the trait uses #[async_trait]).
async-trait = "0.1"

# NATS messaging
async-nats = "0.38"
futures = "0.3"

# Execution-affinity ownership hash (noetl/ai-meta#166 Phase 4).  Byte-identical
# to `noetl-server` `src/sharding.rs` `shard_for` (XxHash64, fixed seed 0) so a
# worker and a server agree on which replica owns an execution.  Already in the
# lock file transitively; named here so `crate::sharding` can hash directly.
twox-hash = "1.6"

# Build-fix pin (NOT used directly).  time 0.3.48 (2026-06-12) collides with
# async-nats 0.38.0's blanket `From<Kind> for Error<Kind>` under rustc 1.92
# (E0119, HourBase).  Pin the transitive dep to the last good release so a
# fresh CI / image build stays off 0.3.48.  Mirrors the same pin in
# noetl-tools 3.7.1.  Revisit when async-nats ships a fix.
time = "=0.3.47"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Parse the `kind: Subscription` spec YAML in the continuous runtime
# (noetl/ai-meta#90 Phase 2).
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Regex
regex = "1.10"

# Secrets Wallet Phase 5c (noetl/ai-meta#61) — worker-side sealed credential
# delivery.  Long-lived X25519 StaticSecret registered as the recipient
# pubkey; ChaCha20-Poly1305 + HKDF-SHA256 unseal the server's SealedEnvelope
# (mirror of noetl/server's src/crypto/sealed.rs primitives).  base64 for
# the wire-shape decode; zeroize for explicit cleartext wipe after the
# caller's tool dispatch returns.
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
zeroize = "1.7"
rand_core = "0.6"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Observability — per agents/rules/observability.md (codified
# 2026-05-30).  `prometheus` provides the metrics registry + the
# Prometheus text format encoder; `axum` exposes the `/metrics`
# endpoint on a dedicated port (default 9090) so sidecar scrapers
# can pull without going through the main control-plane traffic.
prometheus = "0.14"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
hostname = "0.4"

# URL parsing for NATS_URL credential extraction.  Honors
# `nats://user:pass@host` inline auth (the convention the Python
# worker + most NATS clients use); async-nats 0.38's `connect(url)`
# only consumes the addr portion, so we extract creds ourselves
# and feed `ConnectOptions::with_user_and_password`.
url = "2"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
# uuid used in integration tests (dispatch_nats_mcp.rs) to generate unique
# NATS KV bucket names so concurrent test runs don't collide.
uuid = { version = "1", features = ["v4"] }
